Finally fixed nav button on small screen

--- a/site/Resources/css/queries.css
+++ b/site/Resources/css/queries.css
@@ -56,23 +56,26 @@
     margin: 0 0 4% 0;
   }
   #navigationBar {
-    display: inline-block;
+    display: block;
+    width: fit-content;
+    position: absolute;
+    margin-left: 40px;
   }
 
   .main-nav {
     display: none;
-    float: inline-start;
-    margin-top: 30px;
-    margin-left: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     background-color: darkslategray;
     border-radius: 10px;
-    padding-bottom: 0;
+    padding: 0%;
+    margin-top: 10px;
+    margin-left: 30px;
   }
   .mobile-nav-icon {
-    display: inline-block;
-    float: right;
-    position: relative;
+    display: block;
+    position: absolute;
+    float: start;
+    margin-left: 10px;
   }
 
   .main-nav li {
